Day 11. Minor fixes. add new paddings and margins to homepage; fix issues on mobile version;

--- a/style/core.css
+++ b/style/core.css
@@ -31,12 +31,12 @@ header a {
 }
 
 .container {
-    padding: 0 25px;
+    padding: 0 15px;
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1300px) {
     .container {
-        max-width: 1190px;
+        max-width: 1270px;
     }
 }
 
